Minor spacing bugs have been tweaked; a background according to the original theme added to some sections.

--- a/css/features.css
+++ b/css/features.css
@@ -1,5 +1,5 @@
 * {
-  /* text-align: center; */
+  text-align: inherit;
   box-sizing: border-box;
   color: rgb(48, 48, 63);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -74,6 +74,10 @@ header {
   max-width: 30rem;
   min-height: 20rem;
   max-height: 20rem;
+}
+
+.pages-wrapper {
+  text-align: left;
 }
 
 .pages {
