--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
   font-weight: 300;
 }
 /* Header section */
-header {
+.main-header {
   background-image: url(https://images.unsplash.com/photo-1483401757487-2ced3fa77952?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80);
   background-repeat: no-repeat;
   background-size: cover;
@@ -86,7 +86,6 @@ header {
 }
 
 .app-statements {
-  margin-right: 5rem;
   text-align: center;
 }
 
@@ -94,6 +93,8 @@ header {
 .gear,
 .workspace {
   color: orange;
+  margin-right: 16px;
+  font-size: 28px;
 }
 
 .app-stats {
@@ -106,6 +107,12 @@ header {
   gap: 1rem;
 }
 /* stats section */
+.app-stats {
+  background-image: url(https://images.unsplash.com/photo-1483401757487-2ced3fa77952?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .bi-person,
 .bi-box-arrow-down,
 .bi-emoji-laughing,
@@ -159,6 +166,16 @@ header {
 }
 
 /* About section */
+
+.closing-section {
+  background-image: url(https://images.unsplash.com/photo-1483401757487-2ced3fa77952?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.aboutus-wrapper {
+  margin: 3rem;
+}
 
 .legal-p,
 .summary-p,
